tests/sksl/errors/ForInitStmt.glsl
### Compilation failed:

error: 1: expected expression, but found 'for'
error: 1: expected expression, but found ';'
error: 1: expected expression, but found ')'
error: 1: expected expression, but found ')'
4 errors
